--- a/templates/ajax/admin/towns/old_town_explorer.html.twig
+++ b/templates/ajax/admin/towns/old_town_explorer.html.twig
@@ -56,7 +56,7 @@
                                     <div class="padded cell rw-4 factor-1 small content-center-vertical citizen-box citizen-box-name">
                                         <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/professions/death.gif') }}" />
                                         <a class="link" href="{{ url('admin_users_citizen_view', {id: citizen.user.id}) }}">
-                                            <b class="citizen-name">{{ citizen.user.name }}</b>
+                                            <b class="citizen-name">{{ citizen.name }}</b>
                                         </a>&nbsp;
                                     </div>
                                 </div>
