--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -21,7 +21,9 @@
                 {% else %}
                     <i>{{ 'Bearbeiten'|trans({},'global') }}</i>
                 {% endif %}
-                <b>{{ app.user.name }}</b>
+                <b>
+                {{ username }}
+                </b>
             </div>
         {% endif %}
         {% if tid is null %}
