--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -264,7 +264,7 @@
             <div class="row">
                 <div class="cell padded rw-2"><span class="small">{% trans from 'game'%}Empfänger:{% endtrans %}</span></div>
                 <div class="cell padded rw-6">
-                    <input type="text" id="pmrecipient" disabled {% if dest_citizen is not null %}value="{{dest_citizen.user.name}}"{% endif %} />
+                    <input type="text" id="pmrecipient" disabled {% if dest_citizen is not null %}value="{{dest_citizen.name}}"{% endif %} />
                     <input type="hidden" id="pmidrecipient" {% if dest_citizen is not null %}value="{{dest_citizen.id}}"{% endif %}/>
                 </div>
                 {% if dest_citizen is null %}
@@ -280,7 +280,7 @@
                     <div id="recipient_list">
                         <div class="list">
                             {% for citizen in possible_dests|sort((a,b) => a.user.name|lower <=> b.user.name|lower) %}
-                                <div class="recipient small link" x-citizen-id="{{citizen.id}}">{{citizen.user.name}}</div>
+                                <div class="recipient small link" x-citizen-id="{{citizen.id}}">{{citizen.name}}</div>
                             {% endfor %}
                         </div>
                         <button id="close_list">{% trans from 'global'%}Abbrechen{% endtrans %}</button>
