use current citizen to display name

--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -3,6 +3,7 @@
     {# @var posts \App\Entity\Post[] #}
 
     <div class="forum-posts">
+                        {{ dump(post.owner)}}
         {% for post in posts %}
             {% if not post.hidden or is_granted("ROLE_CROW") %}
                 <div class="forum-post {% if not post.hidden %}{% else %}forum-post-hidden{% endif %} {% if post.new %}forum-post-new{% endif %} {% if markedPost is defined and post.id == markedPost %}forum-post-marked{% endif %}" id="{{post.id}}">
@@ -23,9 +24,15 @@
                                 <img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}" />
                                 {% if post.owner.activeTitle %}<span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% else %}
-                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a><br />
+                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">
+                                {% if not in_town %}
+                                    {{ post.owner.activecitizen.name }}
+                                {% else %}
+                                    {{ post.owner.name }}
+                                {% endif %}
+                                </a><br />
                                 {% if post.owner.activeTitle %}<span class="small" style="font-size: 0.7em; display: inline-block;overflow: hidden;text-overflow: ellipsis;max-width: calc(100% - 130px); white-space: nowrap;"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
-                            {% endif %}
+                            {% else %}
                         </b>
                         {% if post.note is not null %}<div class="float-right post-note">{{ post.note|replace({'%at_00%': 'in der Stadt oder am Stadttor'|trans({},'game')})|raw }}</div>{% endif %}
                     </div>
