--- a/templates/ajax/game/jobs.html.twig
+++ b/templates/ajax/game/jobs.html.twig
@@ -54,7 +54,7 @@
                 {% endfor %}
             </div>
             <br />
-            {% if town.conf.features.citizen_alias %}
+            {% if town.conf and town.conf.features.citizen_alias %}
             <h5>{{'Deine Identität'|trans({}, 'game')}} <a class="help-button"><div class="tooltip help">{{ 'Diese Stadt erlaubt es, einen Spitznamen zu tragen.'|trans({},'game') }}</div>{{ 'Hilfe'|trans({},'global') }}</a></h5>
             <div class="row">
                 <div class="cell padded note note-lightest">
@@ -111,7 +111,7 @@
 
         jobConfirm.addEventListener('click', function(e) {
             e.preventDefault();
-            {% if town.conf.features.citizen_alias %}
+            {% if town.conf and town.conf.features.citizen_alias %}
             form.citizenalias = document.getElementById('citizenalias').value;
             {% endif %}
             $.ajax.easySend( '{{ path('api_jobcenter') }}', form,
