--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -1,9 +1,9 @@
 {% extends "ajax/game/town/town.html.twig" %}
 {% block title %}
     {% if owner.alive %}
-        {{ 'Haus von %citizen%'|trans({'%citizen%': owner.user.name}, 'game') }}
+        {{ 'Haus von %citizen%'|trans({'%citizen%': owner.name}, 'game') }}
     {% else %}
-        {{ 'Das Grab von %citizen%'|trans({'%citizen%': owner.user.name}, 'game') }}
+        {{ 'Das Grab von %citizen%'|trans({'%citizen%': owner.name}, 'game') }}
     {% endif %}
 {% endblock %}
 {% block content %}
@@ -15,7 +15,7 @@
     {# @var \App\Entity\Citizen owner #}
     {# @var \App\Structures\HomeDefenseSummary def #}
     <h5>
-        <b>{{ owner.user.name }}</b>
+        <b>{{ owner.name }}</b>
         ({% if owner.alive %}
             <img alt="{{ owner.profession.label|trans({},'game') }}" src="{{ asset('build/images/professions/' ~ owner.profession.icon ~ '.gif') }}" />
         {% else %}
@@ -103,7 +103,7 @@
                 {# @var complaint \App\Entity\Complaint|null #}
                 {% if complaints|length > 0 %}
                     <div class="note">
-                        {{ '%citizen% hat bereits %num% Anzeige(n).'|trans({'%citizen%': owner.user.name, '%num%': '<b>' ~ complaints|length ~ '</b>'}, 'game')|raw }}<br />
+                        {{ '%citizen% hat bereits %num% Anzeige(n).'|trans({'%citizen%': owner.name, '%num%': '<b>' ~ complaints|length ~ '</b>'}, 'game')|raw }}<br />
                         {% set names = ['', 'Verbannung'|trans({},'game'), 'Todesstrafe'|trans({},'game') ] %}
                         {% if complaint is not null and complaint.severity > 0 %}
                             {{ 'Eine davon stammt von dir. Du hast %punishment% gefordert.'|trans({'%punishment%': '<b>' ~ names[complaint.severity] ~ '</b>'}, 'game')|raw }}<br />
@@ -178,7 +178,7 @@
             {% else %}
                 <h5>{% trans from 'game' %}Was geschieht mit dieser Leiche?{% endtrans %}</h5>
                 {% if owner.home.holdsBody %}
-                    <span class="disposal">{{'Da %citizen% tot ist, besteht ein hohes Risiko, dass sein Körper mit ansteckenden Keimen von <em>%townname%</em> kontaminiert ist. Wenn wir nicht wollen, dass er wieder aufersteht und uns angreift, muss er entweder mit Wasser übergossen oder weggeworfen werden.'|trans({'%citizen%': owner.user.name, '%townname%': owner.town.name}, 'game')|raw}}</span>
+                    <span class="disposal">{{'Da %citizen% tot ist, besteht ein hohes Risiko, dass sein Körper mit ansteckenden Keimen von <em>%townname%</em> kontaminiert ist. Wenn wir nicht wollen, dass er wieder aufersteht und uns angreift, muss er entweder mit Wasser übergossen oder weggeworfen werden.'|trans({'%citizen%': owner.name, '%townname%': owner.town.name}, 'game')|raw}}</span>
                     <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Watered') }}"><img alt="" src="{{ asset('build/images/item/item_water.gif') }}" />{{ 'Leiche mit Wasser übergießen'|trans({},'game') }}</button>
                     <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Thrown') }}">{{ 'Leiche aus der Stadt ziehen'|trans({},'game') }} (<div class="ap">2</div>)</button>
                     {% if has_cremato %}
@@ -190,14 +190,14 @@
                 {% else %}
                     <span class="disposal">
                     {% if owner.disposed is null %}
-                        {{'%citizen% ist in der Wüste gestorben und hat seinen Mitbürgern nichts hinterlassen.'|trans({'%citizen%': "<strong>" ~ owner.user.name ~ "</strong>"}, 'game')|raw}}
+                        {{'%citizen% ist in der Wüste gestorben und hat seinen Mitbürgern nichts hinterlassen.'|trans({'%citizen%': "<strong>" ~ owner.name ~ "</strong>"}, 'game')|raw}}
                     {% else %}
                         {% if owner.disposed == constant('App\\Entity\\Citizen::Thrown') %}
-                            {{'Nicht ganz ekelfrei hat %disposing_citizen% den leblosen Körper von %citizen% entsorgt.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.user.name ~ "</em>"}, 'game')|raw}}
+                            {{'Nicht ganz ekelfrei hat %disposing_citizen% den leblosen Körper von %citizen% entsorgt.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.name ~ "</em>"}, 'game')|raw}}
                         {% elseif owner.disposed == constant('App\\Entity\\Citizen::Watered') %}
-                            {{'Dank %disposing_citizen% hat sich der Körper von %citizen% in verfaultes Wasser verwandelt.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.user.name ~ "</em>"}, 'game')|raw}}
+                            {{'Dank %disposing_citizen% hat sich der Körper von %citizen% in verfaultes Wasser verwandelt.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.name ~ "</em>"}, 'game')|raw}}
                         {% elseif owner.disposed == constant('App\\Entity\\Citizen::Cooked') %}
-                            {{'%disposing_citizen% hat %citizen% ordentlich Feuer gegeben. Du hättest Marshmallows vorbereiten können, wenn man dir Bescheid gegeben hätte.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.user.name ~ "</em>"}, 'game')|raw}}
+                            {{'%disposing_citizen% hat %citizen% ordentlich Feuer gegeben. Du hättest Marshmallows vorbereiten können, wenn man dir Bescheid gegeben hätte.'|trans({'%disposing_citizen%': "<em>" ~ owner.disposedBy[0].user.name ~ "</em>", '%citizen%': "<em>" ~ owner.name ~ "</em>"}, 'game')|raw}}
                         {% elseif owner.disposed == constant('App\\Entity\\Citizen::Ghoul') %}
                             {{ 'Keine Ahnung. <strong>Der leblose Körper ist spurlos verschwunden...</strong> Vermutlich liegt er jetzt irgendwo vor der Stadt und verrottet vor sich hin... Vielleicht kommt er euch ja in der Nacht besuchen?'|trans({}, 'game')|raw }}
                         {% else %}
@@ -217,17 +217,17 @@
                     <button x-recycle-home="1">{{ 'Behausung wiederverwerten'|trans({},'game') }} (<div class="ap">1</div>)</button>
                     {% endif %}
                 {% else %}
-                    <span class="disposal">{{'Der Ort (kann man überhaupt von Zuhause reden?), an dem %citizen% lebte, ist keinen Blick wert. Da gibt es nichts zu holen, selbst wenn man alles auseinandernimmt.'|trans({'%citizen%': owner.user.name}, 'game')}}</span>
+                    <span class="disposal">{{'Der Ort (kann man überhaupt von Zuhause reden?), an dem %citizen% lebte, ist keinen Blick wert. Da gibt es nichts zu holen, selbst wenn man alles auseinandernimmt.'|trans({'%citizen%': owner.name}, 'game')}}</span>
                 {% endif %}
             {% endif %}
         </div>
         <div class="padded cell rw-6 citizen-chest">
             {% if owner.alive %}
-                <h5>{{ '%citizen%s Truhe'|trans({'%citizen%': owner.user.name}, 'game') }}</h5>
+                <h5>{{ '%citizen%s Truhe'|trans({'%citizen%': owner.name}, 'game') }}</h5>
                 {% if hidden %}
-                <p class="curtain-text">{{ 'Als du zum Fenster blickst, stellst du fest, dass ein großer Vorhang dir die Sicht versperrt. Du kannst deshalb nicht sehen, was %citizen% bei sich aufbewahrt...'|trans({'%citizen%': owner.user.name},'game') }}</p>
+                <p class="curtain-text">{{ 'Als du zum Fenster blickst, stellst du fest, dass ein großer Vorhang dir die Sicht versperrt. Du kannst deshalb nicht sehen, was %citizen% bei sich aufbewahrt...'|trans({'%citizen%': owner.name},'game') }}</p>
                 {% endif %}
-                {# {% if owner.zone %}<p {% if hidden %}class="hidden with-curtains"{% endif %}>{{ '%citizen% ist ausgegangen...'|trans({'%citizen%': owner.user.name}, 'game') }} {% endif %}</p>#}
+                {# {% if owner.zone %}<p {% if hidden %}class="hidden with-curtains"{% endif %}>{{ '%citizen% ist ausgegangen...'|trans({'%citizen%': owner.name}, 'game') }} {% endif %}</p>#}
                 {% if chest.items|length > 0 %}
                     <p {% if hidden %}class="hidden with-curtains"{% endif %}>{{ 'Wenn Sie aus dem Fenster schauen, können Sie die folgenden Dinge im Haus sehen:'|trans({},'game') }}</p>
                     {% embed "ajax/game/inventory.html.twig" with {'size': chest_size, 'items': chest.items, 'foreignChestMode': true, 'showFreeSlots': false} %}
@@ -241,7 +241,7 @@
                     <p {% if hidden %}class="hidden with-curtains"{% endif %}>
                     {{'Als du durch das Fenster blickst, stellst du fest, dass das Haus von %citizen% keinerlei interessante
                     Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.'|trans({'%citizen%': owner.user.name}, 'game')}}
+                    Nichts, was der Mühe wert wäre.'|trans({'%citizen%': owner.name}, 'game')}}
                     </p>
                 {% endif %}
                 {% if already_stolen %}
@@ -263,17 +263,17 @@
                     {% endif %}
 
                     {% if not owner.zone and not hidden %}
-                    <div class="notice">{{'Du kannst nichts von %citizen% stehlen, solange <strong>er (sie) in der Stadt ist</strong>...'|trans({'%citizen%': owner.user.name}, 'game')|raw}}</div>
+                    <div class="notice">{{'Du kannst nichts von %citizen% stehlen, solange <strong>er (sie) in der Stadt ist</strong>...'|trans({'%citizen%': owner.name}, 'game')|raw}}</div>
                     {% endif %}
                     {% if protect %}
-                        <div class="notice">{{'Cette maison est <strong>protégée</strong> (verrou ou autre...) et ne peut être cambriolée.'|trans({'%citizen%': owner.user.name}, 'game')|raw}}</div>
+                        <div class="notice">{{'Cette maison est <strong>protégée</strong> (verrou ou autre...) et ne peut être cambriolée.'|trans({'%citizen%': owner.name}, 'game')|raw}}</div>
                     {% endif %}
                 {% endif %}
             {% else %}
-                <h5>{{ 'Inventar: %citizen%'|trans({'%citizen%': owner.user.name}, 'game') }}</h5>
+                <h5>{{ 'Inventar: %citizen%'|trans({'%citizen%': owner.name}, 'game') }}</h5>
                 {% if chest.items|length > 0 %}
                     {% if not already_stolen %}
-                    <div class="help">{{'Jetzt, da %citizen% tot ist, kannst du ihm einen <strong>Gegenstand klauen</strong>, wenn du möchtest...'|trans({'%citizen%': owner.user.name}, 'game')|raw}}</div>
+                    <div class="help">{{'Jetzt, da %citizen% tot ist, kannst du ihm einen <strong>Gegenstand klauen</strong>, wenn du möchtest...'|trans({'%citizen%': owner.name}, 'game')|raw}}</div>
                     {% endif %}
                     <p>{{'Beim Durchwühlen seines Hauses entdeckst du folgende Dinge:'|trans({}, 'game')}}</p>
                     {% embed "ajax/game/inventory.html.twig" with {'size': chest_size, 'items': chest.items, 'foreignChestMode': true} %}
@@ -281,7 +281,7 @@
                         {% block title %}{% endblock %}
                     {% endembed %}
                 {% else %}
-                    <div class="help">{{'Als du ins Fenster schaust, bemerkst du, dass %citizen%s Haus keine wertvollen Gegenständen mehr enthält. Wahrscheinlich haben andere Bürger schon alles, was nicht niet- und nagelfest war, mitgenommen...'|trans({'%citizen%': owner.user.name}, 'game')}}</div>
+                    <div class="help">{{'Als du ins Fenster schaust, bemerkst du, dass %citizen%s Haus keine wertvollen Gegenständen mehr enthält. Wahrscheinlich haben andere Bürger schon alles, was nicht niet- und nagelfest war, mitgenommen...'|trans({'%citizen%': owner.name}, 'game')}}</div>
                 {% endif %}
                 {% if already_stolen %}
                     <div class="notice">{{'Du hast heute schon <strong>einen Diebstahl</strong> begangen.'|trans({},'game')|raw}}</div>
@@ -292,7 +292,7 @@
 
     {% if owner.alive %}
     <div class="row">
-        <h5>{{ '%citizen%s Register'|trans({'%citizen%': owner.user.name},'game') }}</h5>
+        <h5>{{ '%citizen%s Register'|trans({'%citizen%': owner.name},'game') }}</h5>
         <div class="cell rw-12">
             {% embed "ajax/game/log.html.twig" with {'log_content': log, 'log_source': path('town_visit_log_controller', {'id': owner.id}) } %}
             {% endembed %}
