do not use the alias if user in different town

--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -25,7 +25,7 @@
                                 {% if post.owner.activeTitle %}<span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% else %}
                                 <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">
-                                {% if not in_town %}
+                                {% if town and post.owner.activecitizen.town.id == town.id %}
                                     {{ post.owner.activecitizen.name }}
                                 {% else %}
                                     {{ post.owner.name }}
