--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -16,8 +16,8 @@
     {% if other_citizens|length == 1 %}
         {{'... allein'|trans({}, 'game')|raw}}
     {% elseif other_citizens|length == 2 %}
-        {% set othername = other_citizens[0].user.name %}
-        {% if other_citizens[0].user == app.user %}{% set othername = other_citizens[1].user.name %}{% endif %}
+        {% set othername = other_citizens[0].name %}
+        {% if other_citizens[0].user == app.user %}{% set othername = other_citizens[1].name %}{% endif %}
         {{'an der Seite von %citizen%'|trans({"%citizen%": othername}, 'game')|raw}}
     {% else %}
         {{ 'als Gruppe'|trans({}, 'game') }}
@@ -153,7 +153,7 @@
 
     {% if citizen.escortSettings is not null and citizen.escortSettings.leader is not null %}
         <div class="help">
-            <b>{{ 'Du folgst aktuell %citizen%.'|trans({'%citizen%': citizen.escortSettings.leader.user.name}, 'game') }}</b>
+            <b>{{ 'Du folgst aktuell %citizen%.'|trans({'%citizen%': citizen.escortSettings.leader.name}, 'game') }}</b>
             <p>
                 {% trans from 'game' %}
                     Solange du einem anderen Bürger folgst, sind deine Handlungsmöglichkeiten eingeschränkt.
@@ -658,7 +658,7 @@
                                             <li class="status">
                                                 <img src="{{ asset('build/images/icons/escort_other.gif') }}" alt="{{ 'Eskorte'|trans({},'game') }}">
                                                 <div class="tooltip">
-                                                    {{ 'Dieser Bürger wird aktuell von %leader% eskortiert.'|trans({'%leader%': other_citizen.escortSettings.leader.user.name},'game') }}
+                                                    {{ 'Dieser Bürger wird aktuell von %leader% eskortiert.'|trans({'%leader%': other_citizen.escortSettings.leader.name},'game') }}
                                                 </div>
                                             </li>
                                         {% endif %}
