--- a/templates/ajax/game/map.html.twig
+++ b/templates/ajax/game/map.html.twig
@@ -57,7 +57,7 @@
                                     {% if in_town and map.zones[x][y].citizens|length != 0 and not chaos %}
                                         {% for resident in map.zones[x][y].citizens %}
                                             <div class="row">
-                                                <div class="cell ro-6 rw-6 right">{{ resident.user.name }}</div>
+                                                <div class="cell ro-6 rw-6 right">{{ resident.name }}</div>
                                             </div>
                                         {% endfor %}
                                     {% endif %}
