--- a/templates/ajax/game/town/citizen_omniscience.html.twig
+++ b/templates/ajax/game/town/citizen_omniscience.html.twig
@@ -36,7 +36,7 @@
             <div class="padded cell rw-2 rw-md-1 center">{{ 'Seele'|trans({},'soul') }}</div>
             <div class="padded cell rw-2 center">{{ 'Aktivität'|trans({},'game') }}</div>
         </div>
-        {% for citizen in citizens|sort((a,b) => (a.infos.alive == b.infos.alive) ? ((a.infos.alive) ? a.infos.user.name|lower <=> b.infos.user.name|lower : b.infos.survivedDays <=> a.infos.survivedDays) : b.infos.alive <=> a.infos.alive) %}
+        {% for citizen in citizens|sort((a,b) => (a.infos.alive == b.infos.alive) ? ((a.infos.alive) ? a.infos.name|lower <=> b.infos.name|lower : b.infos.survivedDays <=> a.infos.survivedDays) : b.infos.alive <=> a.infos.alive) %}
             {% if citizen.infos.alive %}
             <div class="row {% if citizen.infos == me%} me{% endif %}" x-ajax-href="{{ path('town_visit', {id: citizen.infos.id}) }}">
                 <div class="padded cell rw-1 rw-md-2">
@@ -52,7 +52,7 @@
                             <img alt="" src="{{ asset('build/images/professions/void.gif') }}" />
                         {% endif %}
                         <img alt="{{ citizen.infos.profession.label|trans({},'game') }}" src="{{ asset('build/images/professions/' ~ citizen.infos.profession.icon ~ '.gif') }}" />
-                        <b>{{ citizen.infos.user.name }}</b>
+                        <b>{{ citizen.infos.name }}</b>
                     </span>
                 </div>
                 <div class="padded cell rw-4 rw-md-2 small">
